finally fixed links sticking outside screen on phone
display flex to display block in layouts

--- a/_sass/_tufte.scss
+++ b/_sass/_tufte.scss
@@ -405,13 +405,13 @@ blockquote footer {
 section>p,
 section>footer,
 section>table {
-     width: 100%;
+     max-width: 100%;
 }
 
 /* 50 + 5 == 55, to be the same width as paragraph */
 section>ol,
 section>ul {
-     width: 100%;
+     max-width: 100%;
      -webkit-padding-start: 5%;
 }
 
